# RuView

./: README.md  install.sh
.github/workflows/: ci.yml  firmware-ci.yml
.jules/: bolt.md
docs/: build-guide.md
firmware/esp32-csi-node/: README.md  provision.py
firmware/esp32-csi-node/components/display/: CMakeLists.txt
firmware/esp32-csi-node/main/: CMakeLists.txt  csi_collector.c  idf_component.yml
scripts/: provision.py
v1/src/config/: settings.py
v1/src/database/migrations/: env.py
v1/src/middleware/: rate_limit.py
v1/src/sensing/: rssi_collector.py
v1/tests/unit/: test_security_settings.py
